<resources>
    <string name="app_name">Quick Tasks</string>
    <string name="title_popup">Task Name</string>
    <string name="title_picker">Select [Day : Month : Hour] for Reminder</string>
    <string name="title_picker_one">Schedule your first reminder\ne.g. 15th day @ 11:00 am</string>
    <string name="title_picker_two">Schedule your first reminder\ne.g. 18th day @ 19:00 pm</string>
    <string name="msg_notification">You have pending tasks, click here to see them</string>
    <string name="button_desc_remove">Remove</string>
    <string name="button_desc_reset">Reset</string>
    <string name="button_add">"Add Task"</string>
    <string name="button_cancel">"Cancel"</string>
    <string name="button_submit">"Submit"</string>
    <string name="hint_task_name">e.g. feed the cat</string>
    <string name="picker_day">Day</string>
    <string name="picker_hour">Hour</string>
    <string name="picker_minute">Min</string>
    <string name="menu_reminder_one">"Reminder-1"</string>
    <string name="menu_reminder_two">"Reminder-2"</string>
    <string name="menu_export">"Export"</string>
    <string name="menu_import">"Import"</string>
    <string name="toastImport">App settings have been Imported</string>
    <string name="toastExport">App settings have been Exported</string>
    <string name="toastReminder">Reminder time was updated</string>
    <string name="tabMonthly">Monthly</string>
    <string name="tabYearly">Yearly</string>
</resources>
