<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp" >

    <TextView
        android:id="@+id/textHourOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picker_day"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textDayOfMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/picker_hour"
        android:textSize="20dp" />

    <NumberPicker
        android:id="@+id/pickerDayOfMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:textSize="60dp" />

    <NumberPicker
        android:id="@+id/pickerHourOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@android:color/transparent"/>
</RelativeLayout>