<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_desc_remove"
            android:src="@drawable/ic_button_delete" />

    <ImageButton
        android:id="@+id/button_Refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_Delete"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_desc_reset"
        android:src="@drawable/ic_button_refresh" />

    <TextView
        android:id="@+id/text_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_toRightOf="@id/button_Refresh"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTextActive" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/checkBox"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorTextActive" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:buttonTint="@color/colorOrange"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>